deploy: c67452bf8c14ac10f0fe60b6e7015624e27143cf

--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://noelmat.github.io/blog/about/" />
 <meta property="og:site_name" content="Noel Mathew’s Blog" />
 <script type="application/ld+json">
-{"description":"A Datascience blog.","url":"https://noelmat.github.io/blog/about/","@type":"WebSite","headline":"About Me","name":"Noel Mathew’s Blog","@context":"https://schema.org"}</script>
+{"url":"https://noelmat.github.io/blog/about/","@type":"WebSite","headline":"About Me","name":"Noel Mathew’s Blog","description":"A Datascience blog.","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/blog/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://noelmat.github.io/blog/feed.xml" title="Noel Mathew's Blog" /><link rel="shortcut icon" type="image/x-icon" href="/blog/images/favicon.ico"><link href="https://cdn.jsdelivr.net/npm/@primer/css/dist/primer.css" rel="stylesheet" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.css">
